# portfolio-manifest

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
data/ledger/: 2026-W25.jsonl
decisions/: DEC-PM-001-contracts-closure.md
docs/: METHODOLOGY.md  first-pr.md  system-map.md
manifests/: example.yaml
portfolio_manifest/: __init__.py  __main__.py  cli.py  digest.py  drift.py  ledger.py  manifest.py  report.py  score.py  snapshot.py  walker.py
portfolio_manifest/checks/: __init__.py  decision_freshness.py  decision_schema.py  dream_schema.py  eval_coverage.py  spec_schema.py  voice_lint_banlist.py
reports/: 2026-W34.md
schemas/: check-result.schema.json  manifest.schema.json  snapshot.schema.json
scripts/: validate_decisions.py  validate_manifests.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
templates/: snapshot.md.j2
tests/: conftest.py  test_checks.py  test_cli.py  test_digest.py  test_manifest.py  test_snapshot.py
