[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-manifest"
version = "0.1.0"
description = "Cross-repo health dashboard. Manifest format plus weekly audit runner."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "vignesh" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "jinja2>=3.1",
    "click>=8.1",
]

[project.scripts]
portfolio-manifest = "portfolio_manifest.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["portfolio_manifest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
